--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
 /*  your css code here. If applicable */
+.images{
+    display: flex;
+    gap:10px;
+    
+}
+img{
+    width:200px;
+    height:200px;
+}
